# qt-message-handler-practice

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.ui  message.cpp  message.h  messagehandler.cpp  messagehandler.h  messagepresenter.cpp  messagepresenter.h  messagesendtester.cpp  messagesendtester.h  qt_practice.pro
